export const categories = [
  {
    key: 'purchases',
    name: 'categories.purchases',
    icon: 'shopping-bag',
    color: '#e9c46a',
  },
  { key: 'food', name: 'categories.food', icon: 'coffee', color: '#2a9d8f' },
  {
    key: 'salary',
    name: 'categories.salary',
    icon: 'dollar-sign',
    color: '#264653',
  },
  { key: 'car', name: 'categories.car', icon: 'crosshair', color: '#f4a261' },
  {
    key: 'leisure',
    name: 'categories.leisure',
    icon: 'heart',
    color: '#e76f51',
  },
  {
    key: 'studies',
    name: 'categories.studies',
    icon: 'book',
    color: '#e63946',
  },
];
